--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:h2:file:./data/sample
 
 # hibernate will manually generate schema
 spring.jpa.hibernate.ddl-auto=update
-server.port=8090
+server.port=${PORT:8090}
 #spring.jpa.show-sql=true
