--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./../data/sample
+spring.datasource.url=jdbc:h2:file:./data/sample
 
 # hibernate will manually generate schema
 spring.jpa.hibernate.ddl-auto=update
