--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "@types/events": "^3.0.0",
+    "angular-bootstrap-md": "^11.0.0",
+    "mdbootstrap": "^4.19.2",
     "ngx-take-until-destroy": "^5.4.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
